SCRUM-40-HandleVacancyEditOperation